# Group-Project

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MANUAL.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-build.yml
include/: DatabaseManager.h
src/: DatabaseManager.cpp  main.cpp  main_test.cpp
